--- a/experiments/notebooks/1_substeps_do_not_work.ipynb
+++ b/experiments/notebooks/1_substeps_do_not_work.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19191e34",
+   "id": "8e05ce26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d2b58b2",
+   "id": "1599f9dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e8be399",
+   "id": "062ca99e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08dc21a3",
+   "id": "478864ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "91bade7a",
+   "id": "c2947a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "82b511d3",
+   "id": "32fdf7d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c125583",
+   "metadata": {},
+   "source": [
+    "# See Below\n",
+    "\n",
+    "I loop through state history and\n",
+    "* record the highest timestep available\n",
+    "* record the highest substep at the highest timestep"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bfdb3c76",
+   "id": "0088fa46",
    "metadata": {},
    "outputs": [
     {
@@ -284,22 +296,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f75f785",
+   "metadata": {},
+   "source": [
+    "### Notice how the last state history substep jumps to 5 at the start of timestep 1, and is consistently 5. This shows its not adapting to the current timestep, or the max of the max timestep would iterate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "39460ef1",
+   "id": "bb72a083",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-bcda2ecbe07248c2be643a1bafb6fc56\"></div>\n",
+       "<div id=\"altair-viz-98f15040ebb44c088da7f27efb4f9751\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-bcda2ecbe07248c2be643a1bafb6fc56\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-bcda2ecbe07248c2be643a1bafb6fc56\");\n",
+       "    if (outputDiv.id !== \"altair-viz-98f15040ebb44c088da7f27efb4f9751\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-98f15040ebb44c088da7f27efb4f9751\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -370,20 +390,20 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "870fb34e",
+   "id": "de3f5786",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-acc59bbd2d0f44c5be3f7630dc016e46\"></div>\n",
+       "<div id=\"altair-viz-3ba781192ecb43168e752b7245954223\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-acc59bbd2d0f44c5be3f7630dc016e46\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-acc59bbd2d0f44c5be3f7630dc016e46\");\n",
+       "    if (outputDiv.id !== \"altair-viz-3ba781192ecb43168e752b7245954223\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-3ba781192ecb43168e752b7245954223\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -452,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c98b9c91",
+   "id": "5bc0e466",
    "metadata": {},
    "outputs": [
     {
